plugins {
    id 'java'
    id 'org.springframework.boot' version '3.3.5'
    id 'io.spring.dependency-management' version '1.1.6'
}

group = 'com'
version = '0.0.1-SNAPSHOT'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(17)
    }
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    compileOnly 'org.projectlombok:lombok'
    developmentOnly 'org.springframework.boot:spring-boot-devtools'
    runtimeOnly 'com.mysql:mysql-connector-j'
    annotationProcessor 'org.projectlombok:lombok'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
    // JUnit 5 기본 의존성
    testImplementation 'org.junit.jupiter:junit-jupiter:5.10.0'

    // Mocking 라이브러리 (Mockito) 추가
    testImplementation 'org.mockito:mockito-core:5.6.0'

    // AssertJ (선택: 더 나은 Assertion 제공)
    testImplementation 'org.assertj:assertj-core:3.24.2'

}

tasks.named('test') {
    useJUnitPlatform()
}
